# yt-channel-chapter-crawler

./: .gitignore  Makefile  README.MD  pyproject.toml  yt_crawl.py  yt_data.py
.github/: CODEOWNERS
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  test.yml
src/yt_ccc/: cli.py  crawler.py  youtube_api.py
src/yt_crawl/: cli.py  crawler.py  models.py
tests/: test_cli.py  test_crawler.py  test_models.py  test_youtube_api.py
